2003-10-22  JP Rosevear <jpr@ximian.com>

	* cal-client/cal-client.c (cal_client_get_object): only change to
	invalid object error code if we got the object but couldn't parse
	it, and only check for timezones if we had success

	* gui/comp-util.c (cal_comp_is_on_server): don't throw a warning
	if the object simply does not exist

2003-10-21  Rodrigo Moya <rodrigo@ximian.com>

	* gui/calendar-component.c (calendar_component_init): fixed
	a leak caused by only freeing 'base_uri' in some cases.

2003-10-21  JP Rosevear <jpr@ximian.com>

	* gui/control-factory.c (get_prop): fix parse error
	(set_prop): gnome_calendar_open was renamed

	* conduits/todo/todo-conduit.c (start_calendar_server): adapt to
	the cal_client_new changes and the lack of a default calendar
	routine
	(pre_sync): don't have to pass a type for the default object any
	more

	* conduits/calendar/calendar-conduit.c (start_calendar_server):
	adapt to the cal_client_new changes and the lack of a default
	calendar routine
	(pre_sync): don't have to pass a type for the default object any
	more

	* cal-client/cal-client.c (cal_client_open_async): add FIXME
	comment

2003-10-21  Rodrigo Moya <rodrigo@ximian.com>

	* pcs/cal-backend-file.c: store recurrences per object.
	(free_object): free correctly the CalBackendFileObject's
	contained in 'priv->comp_uid_hash'.
	(lookup_component, check_dup_uid, add_component, remove_component,
	match_object_sexp):
	adapted to changes in comp_uid_hash.
	
2003-10-20  Rodrigo Moya <rodrigo@ximian.com>

	* gui/gnome-cal.[ch] (gnome_calendar_add_event_uri): renamed
	from gnome_calendar_open.

	* gui/calendar-component.c (load_uri_for_source): call
	gnome_calendar_add_event_uri instead of setting the URI property on
	the Bonobo control.

2003-10-17  Rodrigo Moya <rodrigo@ximian.com>

	* gui/migration.c (process_calendar_dir): process subfolders.

2003-10-17  Rodrigo Moya <rodrigo@ximian.com>

	* gui/migration.[ch] (migrate_old_calendars): new function.
